--- a/samples/structure-sample-01/EPUB/xhtml/appendix-a.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/appendix-a.xhtml
@@ -9,8 +9,8 @@
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
 	<body epub:type="backmatter">
-		<section epub:type="appendix" id="P70004858060007A3">
-			<span class="pagebreak" title="20" epub:type="pagebreak" id="P7000485806000928"></span>
+		<section epub:type="appendix" id="P70004858060007A3" class="level1">
+			<span title="20" epub:type="pagebreak" id="P7000485806000928"></span>
 			<header>
 				<h1 epub:type="title"><span epub:type="label">Appendix</span>
 					<span epub:type="ordinal">A</span> Title</h1>
@@ -18,13 +18,13 @@
 			</header>
 			<section id="P70004858060007A5" class="level2">
 				<header>
-					<h2 epub:type="title">Appendix Section</h2>
+					<h2>Appendix Section</h2>
 				</header>
 				<p>This is Appendix Body Text. This is Appendix Body Text. This is Appendix Body Text. This is
 					Appendix Body Text. This is Appendix Body Text. </p>
 				<section id="P70004858060007A6" class="level3">
 					<header>
-						<h3 epub:type="title">1 Subsection</h3>
+						<h3>1 Subsection</h3>
 					</header>
 					<p>This is Appendix Body Text. This is Appendix Body Text. This is Appendix Body Text. This is
 						Appendix Body Text. This is Appendix Body Text. </p>
