--- a/samples/structure-sample-01/EPUB/xhtml/bibliography01.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/bibliography01.xhtml
@@ -11,7 +11,7 @@
 	<body epub:type="frontmatter">
 		<section epub:type="bibliography" id="P70004858060006AF">
 			<header>
-				<h1 epub:type="title" id="P70004858060006B0">Bibliography Section</h1>
+				<h1 id="P70004858060006B0">Bibliography Section</h1>
 			</header>
 			<ol>
 				<li epub:type="biblioentry" id="P70004858060006B1"><p>Jamieson, A., Curry, A., &amp; Martinez, G.
@@ -25,7 +25,7 @@
 							should be italic but is not due to error in CSS file</cite>. Alexandria, VA:
 					Author.</p></li>
 			</ol>
-			<span class="pagebreak" title="xvi" epub:type="pagebreak" id="P70004858060006B4"></span>
+			<span title="xvi" epub:type="pagebreak" id="P70004858060006B4"></span>
 		</section>
 	</body>
 </html>
