--- a/samples/structure-sample-01/EPUB/xhtml/body-content.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/body-content.xhtml
@@ -27,7 +27,7 @@
 				<section epub:type="introduction" id="P700048580600075E" class="level1">
 					<span title="17" epub:type="pagebreak" id="P700048580600075F"></span>
 					<header>
-						<h3 epub:type="title">4.1 Introduction Section Label</h3>
+						<h3>4.1 Introduction Section Label</h3>
 					</header>
 					<p>Text in the part or chapter frontmatter that provides a narrative introduction to the part
 						or chapter bodymatter content to follow. Distinct from the toc, objectiveset, and
@@ -40,7 +40,7 @@
 				</section>
 				<section epub:type="learning-objectives" id="P7000485806000760" class="level1">
 					<header>
-						<h3 epub:type="title">4.2 Learning Objectives Section Label</h3>
+						<h3>4.2 Learning Objectives Section Label</h3>
 					</header>
 					<ol>
 						<li epub:type="learning-objective" id="P7000485806000761"><p>This
@@ -55,7 +55,7 @@
 				</section>
 				<section epub:type="case-study" id="P7000485806000766">
 					<header>
-						<h3 epub:type="title">4.3 Case Study Case Study Title </h3>
+						<h3>4.3 Case Study Case Study Title </h3>
 					</header>
 					<p>A case is a section in the main narrative that does not float but is typically visually set
 						off from the running text.</p>
@@ -70,7 +70,7 @@
 			<section id="d6e5625" aria-label="Chapter body">
 				<section id="d6e5627" class="level1">
 					<header>
-						<h3 epub:type="title">4.4 Section Heading</h3>
+						<h3>4.4 Section Heading</h3>
 					</header>
 					<p>This is regular body text in chapter bodymatter. This is regular body text in chapter
 						bodymatter. This is regular body text in chapter bodymatter.</p>
@@ -78,7 +78,7 @@
 						bodymatter. This is regular body text in chapter bodymatter.</p>
 					<section id="d6e5641">
 						<header>
-							<h4 epub:type="title">4.4.1 Example 1</h4>
+							<h4>4.4.1 Example 1</h4>
 						</header>
 						<p>An example is a container for presenting "examples" of things, such as programlistings,
 							worked problems, essays, or whatever thing the author is discussing.</p>
@@ -92,7 +92,7 @@
 					<section id="P7000485806000767">
 						<span title="18" epub:type="pagebreak" id="P7000485806000768"></span>
 						<header>
-							<h4 epub:type="title">4.4.2 Feature Section</h4>
+							<h4>4.4.2 Feature Section</h4>
 						</header>
 						<p>A feature is a section in the main narrative that does not float but is typically
 							visually set off from the running text.</p>
@@ -108,7 +108,7 @@
 							that earned him the 1970 Nobel Peace Prize. </p>
 						<section id="P7000485806000769" class="level3">
 							<header>
-								<h5 epub:type="title">feature section heading</h5>
+								<h5>feature section heading</h5>
 							</header>
 							<p>This is feature subsection text. This is feature subsection text. This is feature
 								subsection text</p>
@@ -117,7 +117,7 @@
 				</section>
 				<section id="P700048580600076A">
 					<header>
-						<h3 epub:type="title">4.5A Feature Section at different level</h3>
+						<h3>4.5A Feature Section at different level</h3>
 					</header>
 					<p>A feature is a section in the main narrative that does not float but is typically visually
 						set off from the running text. It should format the same regardless of nesting level within
@@ -134,7 +134,7 @@
 						1970 Nobel Peace Prize. </p>
 					<section id="P700048580600076C" class="level2">
 						<header>
-							<h4 epub:type="title">feature section heading</h4>
+							<h4>feature section heading</h4>
 						</header>
 						<p>This is feature subsection text. This is feature subsection text. This is feature
 							subsection text</p>
@@ -142,7 +142,7 @@
 				</section>
 				<section id="d6e5727" class="level1">
 					<header>
-						<h3 epub:type="title">4.6 Blockquotes</h3>
+						<h3>4.6 Blockquotes</h3>
 					</header>
 					<p>This is regular body text in chapter bodymatter. This is regular body text in chapter
 						bodymatter. This is regular body text in chapter bodymatter.</p>
@@ -164,12 +164,12 @@
 				</section>
 				<section id="P700048580600076D" class="level1">
 					<header>
-						<h3 epub:type="title">4.7 <img class="inline" width="28" height="13"
+						<h3>4.7 <img class="inline" width="28" height="13"
 								src="../images/study.jpg" alt="" />Misc Other Structures</h3>
 					</header>
 					<section id="P700048580600076E" class="level2">
 						<header>
-							<h4 epub:type="title">Abstract</h4>
+							<h4>Abstract</h4>
 						</header>
 						<p>block-level summary of contents from another source</p>
 						<div epub:type="abstract"><p>Dave Isay, the founder of StoryCorps and the editor of
@@ -205,7 +205,7 @@
 					</section>
 					<section epub:type="notice" id="P7000485806000771">
 						<header>
-							<h4 epub:type="title">Notice</h4>
+							<h4>Notice</h4>
 						</header>
 						<p>An notice is a message set off from the text. It is closely related to the text that
 							preceded it and is typically positioned immediately following the text. Items that are
@@ -222,7 +222,7 @@
 				</section>
 				<section id="P7000485806000774" class="level1">
 					<header>
-						<h3 epub:type="title">4.8 Misc</h3>
+						<h3>4.8 Misc</h3>
 					</header>
 					<p>Numbered equation using MathML</p>
 					<div class="equation">
@@ -257,7 +257,7 @@
 			<section id="d6e6104" aria-label="Chapter back">
 				<section epub:type="conclusion" id="P7000485806000775" class="level1">
 					<header>
-						<h3 epub:type="title">4.9 Conclusion Section</h3>
+						<h3>4.9 Conclusion Section</h3>
 					</header>
 					<p>Container for summary of key points of chapter.</p>
 					<p>Now that you have studied this chapter, you can do the following:</p>
@@ -309,7 +309,7 @@
 					</ol>
 					<section id="P7000485806000776" class="level2">
 						<header>
-							<h4 epub:type="title">Conclusion sub-section</h4>
+							<h4>Conclusion sub-section</h4>
 							<p epub:type="subtitle">This is the subtitle</p>
 						</header>
 						<p>This is conclusion text. This is conclusion text. This is conclusion text. This is
@@ -318,7 +318,7 @@
 				</section>
 				<section epub:type="answers" id="P7000485806000777" class="level1">
 					<header>
-						<h3 epub:type="title">4.10 Answers</h3>
+						<h3>4.10 Answers</h3>
 					</header>
 					<p>answerlist is an orderedlist that contains answers to questions posed in assessment
 						sections.</p>
@@ -340,7 +340,7 @@
 				</section>
 				<section epub:type="practice" id="P7000485806000778" class="level1">
 					<header>
-						<h3 epub:type="title" id="P7000485806000779">4.11 Exercises</h3>
+						<h3 id="P7000485806000779">4.11 Exercises</h3>
 					</header>
 					<p>A container for assessment content, including optional title group, introductory text,
 						instructions, and problems.</p>
@@ -379,7 +379,7 @@
 					</ol>
 					<section epub:type="practice" id="P7000485806001456" class="level2">
 						<header>
-							<h4 epub:type="title">4.11.1 Practice Subsection</h4>
+							<h4>4.11.1 Practice Subsection</h4>
 						</header>
 						<ol>
 							<li><p>This is a general-problem that is auto-numbered</p></li>
@@ -402,7 +402,7 @@
 				</section>
 				<section id="P700048580600077A" class="level1">
 					<header>
-						<h3 epub:type="title">4.12 Keywords </h3>
+						<h3>4.12 Keywords </h3>
 					</header>
 					<p>Keywordset is a container of the list of keywords used in the chapter. Keywords in the
 						keyword list link back to keywords in the body text. Keywords in body text in turn map to
