--- a/samples/structure-sample-01/EPUB/xhtml/copyright.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/copyright.xhtml
@@ -10,9 +10,9 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section id="d6e264" epub:type="copyright-page" class="level1">
-			<span class="pagebreak" title="iv" epub:type="pagebreak" id="P7000485806000695"></span>
+			<span title="iv" epub:type="pagebreak" id="P7000485806000695"></span>
 			<header>
-				<h1 epub:type="title">Copyright Page</h1>
+				<h1>Copyright Page</h1>
 			</header>
 			<table id="P7000485806000694">
 				<tbody>
