--- a/samples/structure-sample-01/EPUB/xhtml/credits.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/credits.xhtml
@@ -9,28 +9,28 @@
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
 	<body>
-		<section epub:type="credits" id="P70004858060007D6">
-			<span class="pagebreak" title="26" epub:type="pagebreak" id="P7000485806000988"></span>
+		<section epub:type="credits" id="P70004858060007D6" class="level1">
+			<span title="26" epub:type="pagebreak" id="P7000485806000988"></span>
 			<header>
-				<h1 epub:type="title" id="P70004858060007D7">Credits</h1>
+				<h1 id="P70004858060007D7">Credits</h1>
 			</header>
 			<section epub:type="credits" id="P70004858060007D8" class="level2">
 				<header>
-					<h2 epub:type="title" id="P70004858060007D9">Chapter 1</h2>
+					<h2 id="P70004858060007D9">Chapter 1</h2>
 				</header>
 				<p epub:type="credit">Photo credit text; Photo credit text; Photo credit text; Photo credit text;
 					Photo credit text; Photo credit text; Photo credit text; </p>
 			</section>
 			<section epub:type="credits" id="P70004858060007DA" class="level2">
 				<header>
-					<h2 epub:type="title" id="P70004858060007DB">Chapter 2</h2>
+					<h2 id="P70004858060007DB">Chapter 2</h2>
 				</header>
 				<p epub:type="credit">Photo credit text; Photo credit text; Photo credit text; Photo credit text;
 					Photo credit text; Photo credit text; Photo credit text; </p>
 			</section>
 			<section epub:type="credits" id="P70004858060007DC" class="level2">
 				<header>
-					<h2 epub:type="title" id="P70004858060007DD">Chapter 3</h2>
+					<h2 id="P70004858060007DD">Chapter 3</h2>
 				</header>
 				<p epub:type="credit">Photo credit text; Photo credit text; Photo credit text; Photo credit text;
 					Photo credit text; Photo credit text; Photo credit text; </p>
