--- a/samples/structure-sample-01/EPUB/xhtml/endnotes.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/endnotes.xhtml
@@ -10,13 +10,13 @@
 	</head>
 	<body>
 		<section epub:type="rearnotes" id="P70004858060007D1" class="level1">
-			<span class="pagebreak" title="25" epub:type="pagebreak" id="P7000485806000978"></span>
+			<span title="25" epub:type="pagebreak" id="P7000485806000978"></span>
 			<header>
-				<h1 epub:type="title">Book Endnote List</h1>
+				<h1>Book Endnote List</h1>
 			</header>
 			<section id="P70004858060007D2" class="level2">
 				<header>
-					<h2 epub:type="title">Chapter 2</h2>
+					<h2>Chapter 2</h2>
 				</header>
 				<ol class="nomark">
 					<li epub:type="rearnote" id="P70004858060007D3">
