--- a/samples/structure-sample-01/EPUB/xhtml/figures-tables.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/figures-tables.xhtml
@@ -18,7 +18,7 @@
 			<section id="d6e3325" aria-label="Chapter body">
 				<section id="P7000485806000720" class="level1">
 					<header>
-						<h3 epub:type="title">2.1 Figure</h3>
+						<h3>2.1 Figure</h3>
 					</header>
 					<p>An illustration, diagram, photo, etc, that is typically referenced from the main flow of the
 						document and that can, without affecting the flow of the document, be moved away from that
@@ -28,7 +28,7 @@
 					<figure id="P7000485806000721">
 						<img alt="alternative text" width="705" height="399" src="../images/fxvii-01.png" />
 						<figcaption>
-							<p epub:type="title">Figure 3.1 Figure Title</p>
+							<p>Figure 3.1 Figure Title</p>
 							<div><p>This is caption text. This is caption text. This is caption text.
 									This is caption text. This is caption text. This is caption text. This is caption
 									text. This is caption text.</p></div>
@@ -38,7 +38,7 @@
 				</section>
 				<section id="P7000485806000722" class="level1">
 					<header>
-						<h3 epub:type="title">2.2 Informalfigure</h3>
+						<h3>2.2 Informalfigure</h3>
 					</header>
 					<p>informalfigure is a class of figure that floats, is not referenced in the text, is usually a
 						photograph, and is un-numbered.</p>
@@ -129,7 +129,7 @@
 				</section>
 				<section id="P7000485806000725" class="level1">
 					<header>
-						<h3 epub:type="title">2.3 Inline Figure</h3>
+						<h3>2.3 Inline Figure</h3>
 					</header>
 					<p>inline is a special class of figure that is required to be placed inline with running text,
 						is always titled or captioned, is a graphic, and is not labeled or numbered. When a graphic
@@ -140,7 +140,7 @@
 				</section>
 				<section id="P7000485806000726" class="level1">
 					<header>
-						<h3 epub:type="title">2.4 Chapter or Part Opening Figure</h3>
+						<h3>2.4 Chapter or Part Opening Figure</h3>
 					</header>
 					<p>opener is a class of figure that is used as part or chapter opening art. Opening art is
 						often specially positioned relative to a design. It does not arbitrarily float, nor is it
@@ -153,7 +153,7 @@
 				</section>
 				<section id="P7000485806000728" class="level1">
 					<header>
-						<h3 epub:type="title">2.5 Figure containing a Table</h3>
+						<h3>2.5 Figure containing a Table</h3>
 					</header>
 					<p>When a table can float away from its main content without affecting flow or understanding of
 						that content, table must be nested in figure. when table is nested inside
@@ -485,7 +485,7 @@
 				</section>
 				<section id="P700048580600072D" class="level1">
 					<header>
-						<h3 epub:type="title">2.6 Informaltable</h3>
+						<h3>2.6 Informaltable</h3>
 					</header>
 					<p>An informaltable is a table that must be set inline to the running text. It is typically
 						un-numbered.</p>
@@ -730,7 +730,7 @@
 				</section>
 				<section id="P7000485806000730" class="level1">
 					<header>
-						<h3 epub:type="title">2.7 Image</h3>
+						<h3>2.7 Image</h3>
 					</header>
 					<p>An inline image with no caption is simply coded as image</p>
 				</section>
