--- a/samples/structure-sample-01/EPUB/xhtml/glossary.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/glossary.xhtml
@@ -9,13 +9,13 @@
 	</head>
 	<body epub:type="backmatter">
 		<section epub:type="glossary" id="P70004858060007B0" class="level1">
-			<span class="pagebreak" title="22" epub:type="pagebreak" id="P7000485806000948"></span>
+			<span title="22" epub:type="pagebreak" id="P7000485806000948"></span>
 			<header>
-				<h1 epub:type="title">Glossary</h1>
+				<h1>Glossary</h1>
 			</header>
 			<section id="P70004858060007B1" class="level2">
 				<header>
-					<h2 epub:type="title">A</h2>
+					<h2>A</h2>
 				</header>
 				<dl class="nomark">
 					<dt epub:type="glossterm" id="P70004858060007B2"><dfn>glossterm 1 text should be dark green and on line of its own</dfn> (pronunciation text)</dt>
@@ -38,7 +38,7 @@
 			</section>
 			<section id="P70004858060007B6" class="level2">
 				<header>
-					<h2 epub:type="title">B</h2>
+					<h2>B</h2>
 				</header>
 				<dl class="glossentrylist">
 					<dt epub:type="glossterm" id="P70004858060007B7"><dfn>glossterm 5 text should be dark green and on line of its own</dfn></dt>
