--- a/samples/structure-sample-01/EPUB/xhtml/halftitle.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/halftitle.xhtml
@@ -12,7 +12,7 @@
 		<section epub:type="halftitlepage" id="d6e189" class="level1">
 			<span title="ii" epub:type="pagebreak" id="P7000485806000692"></span>
 			<header epub:type="fulltitle">
-				<h1 epub:type="title">Half Titlepage Title</h1>
+				<h1>Half Titlepage Title</h1>
 			</header>
 		</section>
 	</body>
