--- a/samples/structure-sample-01/EPUB/xhtml/index01.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/index01.xhtml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
-<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:epub="http://www.idpf.org/2007/ops"
+	xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
 		<title>Index A</title>
 		<link rel="stylesheet" type="text/css" title="day" href="../css/main.css" />
@@ -10,29 +11,43 @@
 	<body epub:type="index">
 		<section epub:type="index-group" id="P70004858060007BC" class="level2">
 			<header>
-				<h2 epub:type="title" id="P70004858060007BD"> A </h2>
+				<h2 id="P70004858060007BD"> A </h2>
 			</header>
 			<ul epub:type="index-entry-list">
 				<li epub:type="index-entry" id="P70004858060007BE">
-					<p><span epub:type="index-term">Index entry with a single page reference, </span><a epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a></p>
+					<p><span epub:type="index-term">Index entry with a single page reference, </span><a
+							epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a></p>
 				</li>
-				<li epub:type="index-entry" id="P70004858060007BF"><p><span epub:type="index-term">Index entry with multiple page references, </span><a epub:type="index-locator" href="body-content.xhtml#P700048580600075F">17</a>, <a epub:type="index-locator" href="body-content.xhtml#P7000485806000768">18</a></p></li>
+				<li epub:type="index-entry" id="P70004858060007BF"><p><span epub:type="index-term">Index entry
+							with multiple page references, </span><a epub:type="index-locator"
+							href="body-content.xhtml#P700048580600075F">17</a>, <a epub:type="index-locator"
+							href="body-content.xhtml#P7000485806000768">18</a></p></li>
 				<li epub:type="index-entry" id="P70004858060007C0">
-					<p><span epub:type="index-term">Index entry with a page range, </span><span epub:type="index-locator-range"><a epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a>–<a epub:type="index-locator" href="body-content.xhtml#P700048580600075F">17</a></span></p>
+					<p><span epub:type="index-term">Index entry with a page range, </span><span
+							epub:type="index-locator-range"><a epub:type="index-locator"
+								href="body-content.xhtml#P700048580600075D">16</a>–<a epub:type="index-locator"
+								href="body-content.xhtml#P700048580600075F">17</a></span></p>
 				</li>
 				<li epub:type="index-entry" id="P70004858060007C1">
-					<p><span epub:type="index-term">multi-level index entry, </span><a epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a></p>
+					<p><span epub:type="index-term">multi-level index entry, </span><a epub:type="index-locator"
+							href="body-content.xhtml#P700048580600075D">16</a></p>
 					<ul epub:type="index-entry-list">
 						<li epub:type="index-entry" id="P70004858060007C2">
-							<p><span epub:type="index-term">2nd level entry, </span><a epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a></p>
+							<p><span epub:type="index-term">2nd level entry, </span><a epub:type="index-locator"
+									href="body-content.xhtml#P700048580600075D">16</a></p>
 						</li>
 					</ul>
 				</li>
 				<li epub:type="index-entry" id="P70004858060007C3">
-					<p><span epub:type="index-term">1st level entry, </span><a epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a> <span epub:type="index-xref-related">see also <a href="index04.xhtml#P70004858060007CD">destination for seealso link</a></span></p>
+					<p><span epub:type="index-term">1st level entry, </span><a epub:type="index-locator"
+							href="body-content.xhtml#P700048580600075D">16</a>
+						<span epub:type="index-xref-related">see also <a href="index04.xhtml#P70004858060007CD"
+								>destination for seealso link</a></span></p>
 				</li>
 				<li epub:type="index-entry" id="P70004858060007C4">
-					<p><span epub:type="index-term">A term used in "see" <span epub:type="index-xref-preferred">See <a href="index04.xhtml#P70004858060007CE">destination for see link</a></span></span></p>
+					<p><span epub:type="index-term">A term used in "see" <span epub:type="index-xref-preferred">See
+									<a href="index04.xhtml#P70004858060007CE">destination for see
+							link</a></span></span></p>
 				</li>
 			</ul>
 		</section>
