--- a/samples/structure-sample-01/EPUB/xhtml/index03.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/index03.xhtml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
-<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:epub="http://www.idpf.org/2007/ops"
+	xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
 		<title>Index C</title>
 		<link rel="stylesheet" type="text/css" title="day" href="../css/main.css" />
@@ -10,12 +11,42 @@
 	<body epub:type="index">
 		<section epub:type="index-group" id="P70004858060007C8" class="index-group level2">
 			<header>
-				<h2 epub:type="title" id="P70004858060007C9"> C </h2>
+				<h2 id="P70004858060007C9"> C </h2>
 			</header>
-			<p>the following text included to occupy space - could be introductory text Ne platonem molestiae voluptaria quo, mel te erat noluisse. Cu eum causae epicuri expetenda. Pro erat iusto dissentiunt ea, et his justo urbanitas reprimique. Ius ea nusquam placerat. Veri mutat dolore usu no, has ullum virtute eu. Cum no singulis voluptaria. Sea latine alterum corrumpit ex, ipsum tritani suscipit ea pri. Tacimates constituto id duo. Te dolorem facilis invidunt his, quot percipitur contentiones ei est, pro te soleat gloriatur efficiendi. Duis facer at vim. An corpora blandit facilisi eam. His ei oratio conceptam efficiantur, et clita conclusionemque pri. Iusto utamur eam te. Pro an consul invidunt scripserit. Per in graeco quodsi pertinacia. Cum in habemus epicurei forensibus. Definiebas repudiandae eos te, sed at scripta voluptua, eruditi conceptam constituam cu eum. Solum dicat voluptua vel et. Per alia melius perfecto ex, quo cu veritus minimum definitiones. Id qui utroque partiendo consequat. Solum integre id quo, ea omnesque eleifend mei. Meis persecuti abhorreant ut has, vim te mazim interpretaris. At alia recteque elaboraret mei, ut has prima recusabo invenire. Cu nam case viris soleat, scripta complectitur mediocritatem quo an. Molestiae assentior at qui. In cum oblique salutandi. Ad aliquid inermis qui, nec democritum consequuntur ad, eius voluptua vim cu. Has oratio dolorem ne. Dolor iisque voluptatibus ea has, ea usu percipitur contentiones, his feugiat sanctus cu. Rationibus constituto cum id, doctus recteque te sit. Per ei eros dolor, ius regione laoreet lucilius te, sanctus accusamus adipiscing id mei. Id vel natum ignota graeci. Case adversarium in est, stet inani constituam in usu, usu iusto utroque cotidieque in. Per at hinc iudicabit appellantur, qualisque dissentias qui ne, in prima accusam recusabo vis. Ius sanctus menandri forensibus an. Eu per wisi sonet apeirian, has ex error efficiantur. Eos at movet dictas constituto. Ad per quas aperiam, eos an velit clita, debet offendit conceptam at per. Eu enim nullam disputando vix. Usu ea omnes virtute, mei ea dicat expetenda reprehendunt. Ea vis libris legendos, ei mutat nominavi nam. Nusquam eligendi sententiae eu mea. Et nec assentior elaboraret scribentur, at eius laudem sit. Ad ius noster aperiam, appareat scripserit per ex, elit ignota et est. Pri no sumo animal minimum, nibh explicari qui ut. Usu eu corrumpit constituam, in integre legendos periculis mei. Cum quando periculis adolescens cu, ei altera oblique nusquam qui. Eu forensibus expetendis eum. Utamur efficiantur cu his, falli nullam aperiri ex eum. His at alii menandri. Saperet deleniti pertinax ut mei. Cum sonet option conclusionemque et, dico deleniti repudiandae te eum.</p>
+			<p>the following text included to occupy space - could be introductory text Ne platonem molestiae
+				voluptaria quo, mel te erat noluisse. Cu eum causae epicuri expetenda. Pro erat iusto dissentiunt
+				ea, et his justo urbanitas reprimique. Ius ea nusquam placerat. Veri mutat dolore usu no, has
+				ullum virtute eu. Cum no singulis voluptaria. Sea latine alterum corrumpit ex, ipsum tritani
+				suscipit ea pri. Tacimates constituto id duo. Te dolorem facilis invidunt his, quot percipitur
+				contentiones ei est, pro te soleat gloriatur efficiendi. Duis facer at vim. An corpora blandit
+				facilisi eam. His ei oratio conceptam efficiantur, et clita conclusionemque pri. Iusto utamur eam
+				te. Pro an consul invidunt scripserit. Per in graeco quodsi pertinacia. Cum in habemus epicurei
+				forensibus. Definiebas repudiandae eos te, sed at scripta voluptua, eruditi conceptam constituam
+				cu eum. Solum dicat voluptua vel et. Per alia melius perfecto ex, quo cu veritus minimum
+				definitiones. Id qui utroque partiendo consequat. Solum integre id quo, ea omnesque eleifend mei.
+				Meis persecuti abhorreant ut has, vim te mazim interpretaris. At alia recteque elaboraret mei, ut
+				has prima recusabo invenire. Cu nam case viris soleat, scripta complectitur mediocritatem quo an.
+				Molestiae assentior at qui. In cum oblique salutandi. Ad aliquid inermis qui, nec democritum
+				consequuntur ad, eius voluptua vim cu. Has oratio dolorem ne. Dolor iisque voluptatibus ea has, ea
+				usu percipitur contentiones, his feugiat sanctus cu. Rationibus constituto cum id, doctus recteque
+				te sit. Per ei eros dolor, ius regione laoreet lucilius te, sanctus accusamus adipiscing id mei.
+				Id vel natum ignota graeci. Case adversarium in est, stet inani constituam in usu, usu iusto
+				utroque cotidieque in. Per at hinc iudicabit appellantur, qualisque dissentias qui ne, in prima
+				accusam recusabo vis. Ius sanctus menandri forensibus an. Eu per wisi sonet apeirian, has ex error
+				efficiantur. Eos at movet dictas constituto. Ad per quas aperiam, eos an velit clita, debet
+				offendit conceptam at per. Eu enim nullam disputando vix. Usu ea omnes virtute, mei ea dicat
+				expetenda reprehendunt. Ea vis libris legendos, ei mutat nominavi nam. Nusquam eligendi sententiae
+				eu mea. Et nec assentior elaboraret scribentur, at eius laudem sit. Ad ius noster aperiam,
+				appareat scripserit per ex, elit ignota et est. Pri no sumo animal minimum, nibh explicari qui ut.
+				Usu eu corrumpit constituam, in integre legendos periculis mei. Cum quando periculis adolescens
+				cu, ei altera oblique nusquam qui. Eu forensibus expetendis eum. Utamur efficiantur cu his, falli
+				nullam aperiri ex eum. His at alii menandri. Saperet deleniti pertinax ut mei. Cum sonet option
+				conclusionemque et, dico deleniti repudiandae te eum.</p>
 			<ul epub:type="index-entry-list">
 				<li epub:type="index-entry" id="P70004858060007CA"><p>
-						<span epub:type="index-term">CCC Ne platonem molestiae voluptaria quo, mel te erat noluisse, </span><a epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a></p></li>
+						<span epub:type="index-term">CCC Ne platonem molestiae voluptaria quo, mel te erat noluisse,
+							</span><a epub:type="index-locator" href="body-content.xhtml#P700048580600075D"
+						>16</a></p></li>
 			</ul>
 		</section>
 	</body>
