--- a/samples/structure-sample-01/EPUB/xhtml/name-index.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/name-index.xhtml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
-<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:epub="http://www.idpf.org/2007/ops"
+	xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
 		<title>Name Index</title>
 		<link rel="stylesheet" type="text/css" title="day" href="../css/main.css" />
@@ -8,12 +9,15 @@
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
 	<body epub:type="index">
-		<section class="name-index" id="P70004858060007CF">
+		<section id="P70004858060007CF" class="level1">
+			<span title="24" epub:type="pagebreak" id="P7000485806000000000000000011968"></span>
 			<header>
-				<h1 epub:type="title"><span class="pagebreak" title="24" epub:type="pagebreak" id="P7000485806000000000000000011968"/> Name Index </h1>
+				<h1>Name Index</h1>
 			</header>
 			<ul epub:type="index-entry-list">
-				<li epub:type="index-entry" id="P70004858060007D0"><p><span epub:type="index-term">Name of Corporation </span><a epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a></p></li>
+				<li epub:type="index-entry" id="P70004858060007D0"><p><span epub:type="index-term">Name of
+							Corporation </span><a epub:type="index-locator"
+							href="body-content.xhtml#P700048580600075D">16</a></p></li>
 			</ul>
 		</section>
 	</body>
