--- a/samples/structure-sample-01/EPUB/xhtml/seriespage.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/seriespage.xhtml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
-<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:svg="http://www.w3.org/2000/svg" xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:svg="http://www.w3.org/2000/svg"
+	xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
 		<title>Series Page Section</title>
 		<link rel="stylesheet" type="text/css" title="day" href="../css/main.css" />
@@ -8,61 +9,90 @@
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
 	<body class="fixed" epub:type="frontmatter">
-		<section epub:type="seriespage" id="d6e25" class="seriespage level1">
+		<section epub:type="seriespage" id="d6e25" class="level1">
+			<span title="i" epub:type="pagebreak" id="P7000485806000691"></span>
 			<header>
-				<h1 epub:type="title"><span class="pagebreak" title="i" epub:type="pagebreak" id="P7000485806000691"/>Series Page Section</h1>
+				<h1>Series Page Section</h1>
 			</header>
 			<p>
-				<span class="strong">Human Communication Disorders: An Introduction</span> , 8e, Noma B. Anderson and George H. Shames, © 2011, ISBN 0137061331 </p>
+				<span class="strong">Human Communication Disorders: An Introduction</span> , 8e, Noma B. Anderson
+				and George H. Shames, © 2011, ISBN 0137061331 </p>
 			<p>
-				<span class="strong">Introduction to Phonetics and Phonology: From Concepts to Transcription</span> , Jacqueline Bauman-Waengler, © 2009, ISBN 0205402879 </p>
+				<span class="strong">Introduction to Phonetics and Phonology: From Concepts to
+					Transcription</span> , Jacqueline Bauman-Waengler, © 2009, ISBN 0205402879 </p>
 			<p>
-				<span class="strong">The Development of Language</span> , 7e, Jean Berko Gleason and Nan Bernstein Ratner, © 2009, ISBN 0205593038 </p>
+				<span class="strong">The Development of Language</span> , 7e, Jean Berko Gleason and Nan Bernstein
+				Ratner, © 2009, ISBN 0205593038 </p>
 			<p>
-				<span class="strong">Language and Communication Disorders in Children</span> , 6e, Deena K. Bernstein and Ellenmorris Tiegerman-Farber, © 2009, ISBN 0205584616 </p>
+				<span class="strong">Language and Communication Disorders in Children</span> , 6e, Deena K.
+				Bernstein and Ellenmorris Tiegerman-Farber, © 2009, ISBN 0205584616 </p>
 			<p>
-				<span class="strong">Articulation and Phonological Disorders: Speech Sound Disorders in Children</span> , 6e, John E. Bernthal, Nicholas W. Bankson, and Peter Flipsen, Jr., © 2009, ISBN 0205569269 </p>
+				<span class="strong">Articulation and Phonological Disorders: Speech Sound Disorders in
+					Children</span> , 6e, John E. Bernthal, Nicholas W. Bankson, and Peter Flipsen, Jr., © 2009,
+				ISBN 0205569269 </p>
 			<p>
-				<span class="strong">What Every Speech-Language Pathologist/Audiologist Should Know about Alternative and Augmentative Communication</span> , Cathy Binger and Jennifer Kent-Walsh, © 2010, ISBN 0137068816 </p>
+				<span class="strong">What Every Speech-Language Pathologist/Audiologist Should Know about
+					Alternative and Augmentative Communication</span> , Cathy Binger and Jennifer Kent-Walsh, ©
+				2010, ISBN 0137068816 </p>
 			<p>
-				<span class="strong">The Voice and Voice Therapy</span> , 8e, Daniel R. Boone, Stephen C. McFarlane, Shelley L. Von Berg, Richard I. Zraick, © 2010, ISBN 0205609538 </p>
+				<span class="strong">The Voice and Voice Therapy</span> , 8e, Daniel R. Boone, Stephen C.
+				McFarlane, Shelley L. Von Berg, Richard I. Zraick, © 2010, ISBN 0205609538 </p>
 			<p>
-				<span class="strong">Language Development: Monolingual and Bilingual Acquisition</span> , Alejandro E. Brice and Roanne G. Brice, © 2009, ISBN 0131700510 </p>
+				<span class="strong">Language Development: Monolingual and Bilingual Acquisition</span> ,
+				Alejandro E. Brice and Roanne G. Brice, © 2009, ISBN 0131700510 </p>
 			<p>
-				<span class="strong">Audiologic Interpretation Across the Lifespan</span> , Debra Busacco, © 2010, ISBN 0205463983 </p>
+				<span class="strong">Audiologic Interpretation Across the Lifespan</span> , Debra Busacco, © 2010,
+				ISBN 0205463983 </p>
 			<p>
-				<span class="strong">The Communication Disorders Casebook: Learning by Example</span> , Shelly S. Chabon and Ellen R. Cohn, © 2011, ISBN 0205610129 </p>
+				<span class="strong">The Communication Disorders Casebook: Learning by Example</span> , Shelly S.
+				Chabon and Ellen R. Cohn, © 2011, ISBN 0205610129 </p>
 			<p>
-				<span class="strong">Understanding Research and Evidence-Based Practice in Communication Disorders: A Primer for Students and Practitioners</span> , William O. Haynes and Carole E. Johnson, © 2009, ISBN 0205453635 </p>
+				<span class="strong">Understanding Research and Evidence-Based Practice in Communication
+					Disorders: A Primer for Students and Practitioners</span> , William O. Haynes and Carole E.
+				Johnson, © 2009, ISBN 0205453635 </p>
 			<p>
-				<span class="strong">Born to Talk: An Introduction to Speech and Language Development</span> , 5e, Lloyd M. Hulit, Merle R. Howard, Kathleen R. Fahey, © 2011, ISBN 0205627528 </p>
+				<span class="strong">Born to Talk: An Introduction to Speech and Language Development</span> , 5e,
+				Lloyd M. Hulit, Merle R. Howard, Kathleen R. Fahey, © 2011, ISBN 0205627528 </p>
 			<p>
-				<span class="strong">Communication Sciences and Disorders: A Contemporary Perspective</span> , 2e, Laura M. Justice, © 2010, ISBN 0135022800 </p>
+				<span class="strong">Communication Sciences and Disorders: A Contemporary Perspective</span> , 2e,
+				Laura M. Justice, © 2010, ISBN 0135022800 </p>
 			<p>
-				<span class="strong">Language Disorders in Children: Fundamental Concepts of Assessment and Intervention</span> , Joan N. Kaderavek, © 2011, ISBN 0131574922 </p>
+				<span class="strong">Language Disorders in Children: Fundamental Concepts of Assessment and
+					Intervention</span> , Joan N. Kaderavek, © 2011, ISBN 0131574922 </p>
 			<p>
-				<span class="strong">Introduction to Audiology (with CD-ROM)</span> , 10e, Frederick N. Martin and John Greer Clark, © 2009, ISBN 0205593119 </p>
+				<span class="strong">Introduction to Audiology (with CD-ROM)</span> , 10e, Frederick N. Martin and
+				John Greer Clark, © 2009, ISBN 0205593119 </p>
 			<p>
-				<span class="strong">A Research Primer for Communication Sciences and Disorders</span> , Timothy Meline, © 2010, ISBN 0137015976 </p>
+				<span class="strong">A Research Primer for Communication Sciences and Disorders</span> , Timothy
+				Meline, © 2010, ISBN 0137015976 </p>
 			<p>
-				<span class="strong">Language and Literacy Disorders: Infancy through Adolescence</span> , Nickola W. Nelson, © 2010, ISBN 0205501788 </p>
+				<span class="strong">Language and Literacy Disorders: Infancy through Adolescence</span> , Nickola
+				W. Nelson, © 2010, ISBN 0205501788 </p>
 			<p>
-				<span class="strong">Language Disorders: A Functional Approach to Assessment and Intervention</span> , 5e, Robert E. Owens, Jr., © 2010, ISBN 0205607640 </p>
+				<span class="strong">Language Disorders: A Functional Approach to Assessment and
+					Intervention</span> , 5e, Robert E. Owens, Jr., © 2010, ISBN 0205607640 </p>
 			<p>
-				<span class="strong">Introduction to Communication Disorders: A Lifespan Evidence-Based Perspective</span> , 4e, Robert E. Owens, Jr., Dale Evan Metz, Kimberly A. Farinella, © 2011, ISBN 0137000081 </p>
+				<span class="strong">Introduction to Communication Disorders: A Lifespan Evidence-Based
+					Perspective</span> , 4e, Robert E. Owens, Jr., Dale Evan Metz, Kimberly A. Farinella, © 2011,
+				ISBN 0137000081 </p>
 			<p>
-				<span class="strong">Linguistics for Non-Linguists: A Primer with Exercises</span> , 5e, Frank Parker and Kathryn Riley, © 2010, ISBN 0137152043 </p>
+				<span class="strong">Linguistics for Non-Linguists: A Primer with Exercises</span> , 5e, Frank
+				Parker and Kathryn Riley, © 2010, ISBN 0137152043 </p>
 			<p>
-				<span class="strong">Building ASL Interpreting and Translation Skills: Narratives for Practice (with DVD)</span> , Nanci A. Scheetz, © 2009, ISBN 0205470254 </p>
+				<span class="strong">Building ASL Interpreting and Translation Skills: Narratives for Practice
+					(with DVD)</span> , Nanci A. Scheetz, © 2009, ISBN 0205470254 </p>
 			<p>
-				<span class="strong">Evaluating Research in Communicative Disorders</span> , 6e, Nicholas Schiavetti, Dale Evan Metz, Robert F. Orlikoff, © 2011, ISBN 0137151551 </p>
+				<span class="strong">Evaluating Research in Communicative Disorders</span> , 6e, Nicholas
+				Schiavetti, Dale Evan Metz, Robert F. Orlikoff, © 2011, ISBN 0137151551 </p>
 			<p>
-				<span class="strong">Stuttering: Foundations and Clinical Applications</span> , Ehud Yairi and Carol H. Seery, © 2011, ISBN 0131573101 </p>
+				<span class="strong">Stuttering: Foundations and Clinical Applications</span> , Ehud Yairi and
+				Carol H. Seery, © 2011, ISBN 0131573101 </p>
 			<p>
-				<span class="strong">FOR A FULL LISTING OF THE LATEST RESOURCES OF INTEREST, BROWSE OUR ONLINE CATALOG AT</span>
+				<span class="strong">FOR A FULL LISTING OF THE LATEST RESOURCES OF INTEREST, BROWSE OUR ONLINE
+					CATALOG AT</span>
 			</p>
 			<p>
-				<a class="ulink" href="http://www.pearsonhighered.com">www.pearsonhighered.com</a>
+				<a href="http://www.pearsonhighered.com">www.pearsonhighered.com</a>
 			</p>
 		</section>
 	</body>
