--- a/samples/structure-sample-01/EPUB/xhtml/titlepage.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/titlepage.xhtml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
-<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:svg="http://www.w3.org/2000/svg" xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:svg="http://www.w3.org/2000/svg"
+	xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
 		<title> Titlepage Title </title>
 		<link rel="stylesheet" type="text/css" title="day" href="../css/main.css" />
@@ -8,16 +9,18 @@
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
 	<body class="fixed" epub:type="frontmatter">
-		<section epub:type="titlepage" id="d6e199" class="titlepage level1">
+		<section epub:type="titlepage" id="d6e199" class="level1">
+			<span title="iii" epub:type="pagebreak" id="P7000485806000693"></span>
 			<header epub:type="fulltitle">
-				<h1 epub:type="title"><span class="pagebreak" title="iii" epub:type="pagebreak" id="P7000485806000693"/>Titlepage Title</h1>
+				<h1>Titlepage Title</h1>
 			</header>
 			<div class="edition"><p><span class="strong">FOURTH EDITION</span></p></div>
 			<div class="authorgroup">
 				<div class="author">
 					<div class="name"><p>Adrienne L. Herrell</p></div>
 					<div class="affiliation">
-						<div class="orgname"><p>Florida State University California State University, Fresno, Emeritus Educational Partnerships, Panama City, Florida</p></div>
+						<div class="orgname"><p>Florida State University California State University, Fresno,
+								Emeritus Educational Partnerships, Panama City, Florida</p></div>
 						<div class="jobtitle"><p>Jobtitle text here. Jobtitle text here.</p></div>
 						<div class="orgdiv"><p>Orgdiv text here. Orgdiv text here.</p></div>
 					</div>
@@ -25,13 +28,16 @@
 				<div class="author">
 					<div class="name"><p>Michael Jordan</p></div>
 					<div class="affiliation">
-						<p>California State University, Fresno, Retired Educational Partnerships, Panama City, Florida</p>
+						<p>California State University, Fresno, Retired Educational Partnerships, Panama City,
+							Florida</p>
 					</div>
 				</div>
 			</div>
 			<div class="publisher">
 				<div class="publishername">Addison-Wesley</div>
-				<div class="publisherlocation"><p>Boston Columbus Indianapolis New York San Francisco Upper Saddle River Amsterdam Cape Town Dubai London Madrid Milan Munich Paris Montreal Toronto Delhi Mexico City Sao Paulo Sydney Hong Kong Seoul Singapore Taipei Tokyo</p></div></div>
+				<div class="publisherlocation"><p>Boston Columbus Indianapolis New York San Francisco Upper Saddle
+						River Amsterdam Cape Town Dubai London Madrid Milan Munich Paris Montreal Toronto Delhi
+						Mexico City Sao Paulo Sydney Hong Kong Seoul Singapore Taipei Tokyo</p></div></div>
 			<p><img width="157" height="60" src="../images/pub1.jpg" alt="Pearson" /></p>
 		</section>
 	</body>
