--- a/samples/structure-sample-01/EPUB/xhtml/about-authors.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/about-authors.xhtml
@@ -10,16 +10,16 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section id="P70004858060006A4" class="level1">
-			<span class="pagebreak" title="xi" epub:type="pagebreak" id="P70004858060006A5"></span>
+			<span title="xi" epub:type="pagebreak" id="P70004858060006A5"></span>
 			<header>
-				<h1 epub:type="title">About the Authors Section</h1>
+				<h1>About the Authors Section</h1>
 			</header>
 			<p>aboutauthorset is block level section that contains one or more aboutauthor author profiles. It is
 				typically labeled "About the Author" and appears in the product frontmatter and sometimes in
 				structures such as sidebars.</p>
 			<section id="d6e1107" class="level2">
 				<header>
-					<h2 epub:type="title">Author Name</h2>
+					<h2>Author Name</h2>
 				</header>
 				<p>is a author bio text here...visiting professor at Florida State University. She taught classes
 					in early literacy, assessment, and strategies for teaching English language learners at
@@ -37,7 +37,7 @@
 			</section>
 			<section id="d6e1134" class="level2">
 				<header>
-					<h2 epub:type="title">Author Name</h2>
+					<h2>Author Name</h2>
 				</header>
 				<p>is a author bio text here...recently retired from California State University, Fresno—has
 					taught primary grades through high school in Georgia, Alabama, Florida, and California. Dr.
@@ -55,12 +55,12 @@
 			</section>
 			<section id="d6e1161" class="level2">
 				<header>
-					<h2 epub:type="title">Author Name</h2>
+					<h2>Author Name</h2>
 				</header>
 				<p>author bio text here serve as educational consultants to a number of school districts across
 					the nation and have presented widely on the subject of reading and comprehension at national
 					and international conferences.</p>
-				<span class="pagebreak" title="xii" epub:type="pagebreak" id="P70004858060006A6"></span>
+				<span title="xii" epub:type="pagebreak" id="P70004858060006A6"></span>
 			</section>
 		</section>
 	</body>
