--- a/samples/structure-sample-01/EPUB/xhtml/asides.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/asides.xhtml
@@ -13,7 +13,7 @@
 			<span title="5" epub:type="pagebreak" id="P70004858060006FA"></span>
 			<header>
 				<h1 epub:type="title"><span epub:type="label">Chapter</span>
-					<span epub:type="ordinal">2:</span> Asides</h1>
+					<span epub:type="ordinal">1:</span> Asides</h1>
 			</header>
 			<section id="d6e2738" aria-label="Chapter front">
 				<p>Asides are block-level supplemental content that may present in a number of ways. They are
@@ -30,7 +30,7 @@
 			<section id="d6e2772" aria-label="Chapter body">
 				<section id="P70004858060006FB" class="level1">
 					<header>
-						<h3 epub:type="title"><span epub:type="ordinal">1.1</span> Sidebars</h3>
+						<h3>1.1 Sidebars</h3>
 					</header>
 					<p>A sidebar is a titled aside that is typically several paragraphs in length and may contain
 						images and media and even small titled sections and a practice section at the end. It is
@@ -40,7 +40,7 @@
 						in addition to a title. </p>
 					<aside class="sidebar" id="P70004858060006FC">
 						<header>
-							<h4 epub:type="title" id="P70004858060006FD">Sidebar title</h4>
+							<h4 id="P70004858060006FD">Sidebar title</h4>
 						</header>
 						<p>This is sidebar text. This is sidebar texts. This is sidebar text. This is sidebar text. </p>
 						<p>This is sidebar text. This is sidebar text. This is sidebar text. This is sidebar text. </p>
@@ -128,7 +128,7 @@
 						</figure>
 						<section epub:type="practice" id="P7000485806000702">
 							<header>
-								<h5 id="P7000485806000703" epub:type="title">Sidebar Practice
+								<h5 id="P7000485806000703">Sidebar Practice
 										Section Label</h5>
 							</header>
 							<ol class="practicelist">
@@ -164,7 +164,7 @@
 				</section>
 				<section id="P700048580600070C" class="level1">
 					<header>
-						<h3 epub:type="title">1.2 Footnotes</h3>
+						<h3>1.2 Footnotes</h3>
 					</header>
 					<p>A footnote is an aside associated with a specific range of text. It is indicated by a marker
 						in the text known as the footnote reference, typically a raised number or symbol. The
@@ -186,11 +186,11 @@
 				</section>
 				<section id="P700048580600070D" class="level1">
 					<header>
-						<h3 epub:type="title">1.3 Endnotes</h3>
+						<h3>1.3 Endnotes</h3>
 					</header>
 					<section id="P70004858060000000000000002226F6" class="level2">
 						<header>
-							<h4 epub:type="title">1.3.1 Chapter Endnotes</h4>
+							<h4>1.3.1 Chapter Endnotes</h4>
 						</header>
 						<p>An endnote is an aside associated with a specific range of text. As with the footnote, it
 							is indicated by a marker in the text known as the footnote reference, typically a raised
@@ -217,7 +217,7 @@
 					</section>
 					<section id="P70004858060000000000000001116F6" class="level2">
 						<header>
-							<h4 epub:type="title">1.3.2 Book Endnotes</h4>
+							<h4>1.3.2 Book Endnotes</h4>
 						</header>
 						<p>Endnotes may also appear in the product backmatter. The example below links to product
 							backmatter endnotes.</p>
@@ -237,7 +237,7 @@
 				</section>
 				<section id="P700048580600070E" class="level1">
 					<header>
-						<h3 epub:type="title">1.4 Marginalia</h3>
+						<h3>1.4 Marginalia</h3>
 					</header>
 					<p>Marginalia is an aside that is typically short in length, a single paragraph at most. Unlike
 						a footnote or endnote, there is no visible marginalia reference in the text. Like a foonote,
@@ -276,7 +276,7 @@
 				</section>
 				<section id="P7000485806000713" class="level1">
 					<header>
-						<h3 epub:type="title">1.5 Pullquote</h3>
+						<h3>1.5 Pullquote</h3>
 					</header>
 					<p>A pull quote (also known as a lift-out quote) is a quotation or excerpt from an article that
 						is typically placed in a larger or distinctive typeface on the same page/screen, serving to
@@ -293,7 +293,7 @@
 				<section id="P7000485806000716" class="level1">
 					<span title="6" epub:type="pagebreak" id="P7000485806000715"></span>
 					<header>
-						<h3 epub:type="title">1.6 Annotation</h3>
+						<h3>1.6 Annotation</h3>
 					</header>
 					<p>An annotation is a block-level note, analysis or commentary that is made regarding the text.
 						It may take the form of notes to the teacher or to the student. A reference to the
@@ -304,14 +304,13 @@
 							href="#P7000485806000718">5</a></p>
 					<aside class="annotation annotation_instructor" epub:type="help" id="P7000485806000717">
 						<header>
-							<h4 epub:type="title">4 Analyze</h4>
+							<h4>4 Analyze</h4>
 						</header>
 						<p>This is the instructor's annotation...</p>
 					</aside>
 					<aside class="annotation" epub:type="help" id="P7000485806000718">
 						<header>
-							<h4 epub:type="title">5
-								Points</h4>
+							<h4>5 Points</h4>
 						</header>
 						<p>This is a regular annotation</p>
 					</aside>
@@ -320,7 +319,7 @@
 			<section id="d6e3272" aria-label="Chapter back">
 				<section id="P7000485806000719" class="level1">
 					<header>
-						<h3 epub:type="title">1.7 Chapter Endnote List</h3>
+						<h3>1.7 Chapter Endnote List</h3>
 					</header>
 					<ol epub:type="rearnotes">
 						<li epub:type="rearnote" id="P700048580600071A">
