--- a/samples/structure-sample-01/EPUB/xhtml/bibliography02.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/bibliography02.xhtml
@@ -10,12 +10,12 @@
 	</head>
 	<body epub:type="backmatter">
 		<section epub:type="bibliography" id="P70004858060007A7">
-			<span class="pagebreak" title="21" epub:type="pagebreak" id="P7000485806000938"></span>
+			<span title="21" epub:type="pagebreak" id="P7000485806000938"></span>
 			<header>
-				<h1 epub:type="title">Bibliography</h1>
+				<h1>Bibliography</h1>
 			</header>
 			<section id="P70004858060007A8" class="level2"><header>
-				<h2 epub:type="title">Chapter 1</h2>
+				<h2>Chapter 1</h2>
 			</header>
 				<ol class="nomark">
 					<li epub:type="biblioentry" id="P70004858060007A9"><p>This is biblioentry text. It should
@@ -28,7 +28,7 @@
 			</section>
 			<section id="P70004858060007AC" class="level2">
 				<header>
-					<h2 epub:type="title">Chapter 4</h2>
+					<h2>Chapter 4</h2>
 				</header>
 				<ol class="nomark">
 					<li epub:type="biblioentry" id="P70004858060007AD"><p>This is biblioentry text. It should
