--- a/samples/structure-sample-01/EPUB/xhtml/part01.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/part01.xhtml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
-<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:epub="http://www.idpf.org/2007/ops"
+	xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
 		<title> Part I: Part Title </title>
 		<link rel="stylesheet" type="text/css" title="day" href="../css/main.css" />
@@ -8,9 +9,11 @@
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
 	<body>
-		<section epub:type="part" id="P70004858060006B5">
+		<section epub:type="part" id="P70004858060006B5" class="level1">
+			<span epub:type="pagebreak" title="1" id="P70004858060006B6"></span>
 			<header>
-				<h1 epub:type="title"><span epub:type="label">Part </span><span epub:type="ordinal">I: </span><span class="pagebreak" title="1"  id="P70004858060006B6"/>Part Title</h1>
+				<h1 epub:type="title"><span epub:type="label">Part</span>
+					<span epub:type="ordinal">I:</span> Part Title</h1>
 			</header>
 		</section>
 	</body>
