--- a/samples/structure-sample-01/EPUB/xhtml/preface.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/preface.xhtml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
-<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:epub="http://www.idpf.org/2007/ops" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:epub="http://www.idpf.org/2007/ops"
+	xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
 		<title> Preface Section </title>
 		<link rel="stylesheet" type="text/css" title="day" href="../css/main.css" />
@@ -9,34 +10,73 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section epub:type="preface" id="P70004858060006A7" class="level1">
+			<span title="xiii" epub:type="pagebreak" id="P70004858060006A8"></span>
 			<header>
-				<h1 epub:type="title"><span epub:type="label">Preface Section</span><span class="pagebreak" title="xiii" epub:type="pagebreak" id="P70004858060006A8"/></h1>
+				<h1>Preface Section</h1>
 			</header>
-			<p>This is Preface text. The United States becomes more ethnically and linguistically diverse every year. More than 90 percent of new residents come from non-English-speaking countries. The number of students with non-English-speaking backgrounds represents the fastest growing group of this population. In the last decade, the total student enrollment in public schools increased by only 14 percent, while the number of English learners grew 70 percent and is projected to grow even more (<a epub:type="biblioref" href="bibliography01.xhtml#P70004858060006B2">National Clearinghouse for Bilingual Education, 1999</a>). The 2000 U.S. Census identified 20 percent of school-age children as non-native English speakers (<a epub:type="biblioref" href="bibliography01.xhtml#P70004858060006B1">Jamieson, Curry, &amp; Martinez, 2001</a>).</p>
-			<p>Teachers everywhere face enormous challenges in their classrooms. They are expected to meet the needs of an increasingly diverse population. There is more content to teach each year as well. Teachers are now expected to integrate technology and teach to myriad standards, and they are judged by the standardized test scores achieved by their students, with no excuses tolerated and little understanding of the challenges they face daily in the classroom.</p>
-			<p>This fourth edition of <span class="emphasis">50 Strategies for Teaching English Language Learners </span>includes a number of features to support teachers in meeting some of the more daunting challenges of the 21st-century classroom.</p>
+			<p>This is Preface text. The United States becomes more ethnically and linguistically diverse every
+				year. More than 90 percent of new residents come from non-English-speaking countries. The number
+				of students with non-English-speaking backgrounds represents the fastest growing group of this
+				population. In the last decade, the total student enrollment in public schools increased by only
+				14 percent, while the number of English learners grew 70 percent and is projected to grow even
+				more (<a epub:type="biblioref" href="bibliography01.xhtml#P70004858060006B2">National
+					Clearinghouse for Bilingual Education, 1999</a>). The 2000 U.S. Census identified 20 percent of
+				school-age children as non-native English speakers (<a epub:type="biblioref"
+					href="bibliography01.xhtml#P70004858060006B1">Jamieson, Curry, &amp; Martinez, 2001</a>).</p>
+			<p>Teachers everywhere face enormous challenges in their classrooms. They are expected to meet the
+				needs of an increasingly diverse population. There is more content to teach each year as well.
+				Teachers are now expected to integrate technology and teach to myriad standards, and they are
+				judged by the standardized test scores achieved by their students, with no excuses tolerated and
+				little understanding of the challenges they face daily in the classroom.</p>
+			<p>This fourth edition of <span class="emphasis">50 Strategies for Teaching English Language Learners
+				</span>includes a number of features to support teachers in meeting some of the more daunting
+				challenges of the 21st-century classroom.</p>
 			<section id="P70004858060006A9" class="level2">
 				<header>
-					<h2 epub:type="title" id="P70004858060006AA">Preface Subsection</h2>
+					<h2 id="P70004858060006AA">Preface Subsection</h2>
 				</header>
-				<p><span class="pagebreak" title="xiv" epub:type="pagebreak" id="P70004858060006AB"/>Reading and understanding the theoretical overview (<a class="pageref" epub:type="pagebreak" href="part01.xhtml#P70004858060006B5"><span epub:type="label">Section </span><span epub:type="ordinal">I</span></a>) is vital to understanding the basic principles of instructing and assessing English learners. This should be approached first. The other sections can be approached one strategy at a time, but one or two strategies from each section should be tried first before working through each section. Strategies that are the easiest to implement are listed first in each category. It makes sense for students or beginning teachers to build their repertoire of strategies gradually, sampling from all five sections. After that, the text can easily be used as a resource book.</p>
-				<p>When you notice a need among your students, look for a strategy to meet that need. Keep in mind the basic principles of teaching English learners. You must support their understanding with realia, visuals, and contextualized language. It is vital to emphasize vocabulary, fluency, and building background knowledge for comprehension. Students must be actively engaged to benefit fully from instruction. They must be given opportunities to demonstrate their growing skills in authentic <span class="pagebreak" title="xv" epub:type="pagebreak" id="P70004858060006AC"/>tasks and in a nonstressful environment. This text is written with the goal of providing this type of classroom for all students.</p>
+				<span title="xiv" epub:type="pagebreak" id="P70004858060006AB"></span>
+				<p>Reading and understanding the theoretical overview (<a 
+						href="part01.xhtml#P70004858060006B5">Section I</a>) is vital to understanding the basic principles of
+					instructing and assessing English learners. This should be approached first. The other sections
+					can be approached one strategy at a time, but one or two strategies from each section should be
+					tried first before working through each section. Strategies that are the easiest to implement
+					are listed first in each category. It makes sense for students or beginning teachers to build
+					their repertoire of strategies gradually, sampling from all five sections. After that, the text
+					can easily be used as a resource book.</p>
+				<p>When you notice a need among your students, look for a strategy to meet that need. Keep in mind
+					the basic principles of teaching English learners. You must support their understanding with
+					realia, visuals, and contextualized language. It is vital to emphasize vocabulary, fluency, and
+					building background knowledge for comprehension. Students must be actively engaged to benefit
+					fully from instruction. They must be given opportunities to demonstrate their growing skills in
+					authentic <span title="xv" epub:type="pagebreak" id="P70004858060006AC"
+					></span>tasks and in a nonstressful environment. This text is written with the goal of
+					providing this type of classroom for all students.</p>
 			</section>
 			<section epub:type="acknowledgments" id="P70004858060006AD" class="level2">
 				<header>
-					<h2 epub:type="title" id="P70004858060006AE"><span epub:type="label">Acknowledgments Section Label</span></h2>
+					<h2 id="P70004858060006AE">Acknowledgments Section Label</h2>
 				</header>
-				<p>This is acknowledgements text. We wish to thank the following teachers for the use of their classrooms in validating strategies and for their ongoing implementation of the strategies in support of their students.</p>
+				<p>This is acknowledgements text. We wish to thank the following teachers for the use of their
+					classrooms in validating strategies and for their ongoing implementation of the strategies in
+					support of their students.</p>
 				<ul class="ul_none">
 					<li><p>Susan McCloskey, K–1 teacher, Viking Elementary School, Fresno, California</p></li>
-					<li><p>Vince Workmon, fourth-/fifth-grade teacher, Muir Elementary School, Fresno, California</p></li>
-					<li><p>Scott Benning, primary literacy coach, Greenberg Elementary School, Fresno, California</p></li>
-					<li><p>David Reynolds, 10th-grade English teacher, Avenal High School, Avenal, California</p></li>
-					<li><p>Diana Bateman, kindergarten teacher, Imperial Estates Elementary School, Titusville, Florida</p></li>
-					<li><p>Jennifer Bateman, second-grade teacher, Blackburn Elementary School, Dahlonega, Georgia</p></li>
-					<li><p>Teachers at Rosa Parks Elementary School, Clark Middle School, and Hoover High School—San Diego, California</p></li>
+					<li><p>Vince Workmon, fourth-/fifth-grade teacher, Muir Elementary School, Fresno,
+							California</p></li>
+					<li><p>Scott Benning, primary literacy coach, Greenberg Elementary School, Fresno,
+							California</p></li>
+					<li><p>David Reynolds, 10th-grade English teacher, Avenal High School, Avenal,
+						California</p></li>
+					<li><p>Diana Bateman, kindergarten teacher, Imperial Estates Elementary School, Titusville,
+							Florida</p></li>
+					<li><p>Jennifer Bateman, second-grade teacher, Blackburn Elementary School, Dahlonega,
+							Georgia</p></li>
+					<li><p>Teachers at Rosa Parks Elementary School, Clark Middle School, and Hoover High
+							School—San Diego, California</p></li>
 					<li><p>Teachers at Tanaina Elementary School—Wasilla, Alaska</p></li>
-					<li><p>We appreciate the comments and suggestions of the following individuals who reviewed the manuscript:</p></li>
+					<li><p>We appreciate the comments and suggestions of the following individuals who reviewed the
+							manuscript:</p></li>
 					<li><p>Kathryn M. Ciechanowski, Oregon State University</p></li>
 					<li><p>Louise Lockard, Northern Arizona University</p></li>
 					<li><p>Judy Geller-Marlowe, New York University and</p></li>
